--- a/src/app/passengers/containers/airport/airport.component.html
+++ b/src/app/passengers/containers/airport/airport.component.html
@@ -1,41 +1,43 @@
 <app-shared-header></app-shared-header>
-<div class="main-button">
-  <app-primary-button>MIS VIAJES</app-primary-button>
-</div>
-<div class="container">
-  <section class="airport-banner-container">
-  </section>
-  <section class="airport-gap-container">
-    <div class="title">AEROPUERTOS CERCANOS</div>
-    <div class="toggle">
-      <app-toggle-button label="MI UBICACION"></app-toggle-button>
-    </div>
-  </section>
-  <section class="shared-container">
-    <app-display-button
-      message="PALMEROLA"
-      class="xpl display-btn"
-      title="XPL"
-    ></app-display-button>
-    <app-display-button
-      message="VILLEDA MORALES"
-      class="rvm display-btn"
-      title="RVM"
-    ></app-display-button>
-  </section>
-  <section class="shared-container">
-    <app-display-button
-      message="TONCONTIN"
-      class="tct display-btn"
-      title="TCT"
-    ></app-display-button>
-    <app-display-button
-      message="GOLOSON"
-      class="gls display-btn"
-      title="GLS"
-    ></app-display-button>
-  </section>
+<ion-content>
   <div class="main-button">
-    <app-primary-button>CONFIRMAR DESTINO</app-primary-button>
+    <app-primary-button>MIS VIAJES</app-primary-button>
   </div>
-</div>
+  <div class="container">
+    <section class="airport-banner-container">
+    </section>
+    <section class="airport-gap-container">
+      <div class="title">AEROPUERTOS CERCANOS</div>
+      <div class="toggle">
+        <app-toggle-button label="MI UBICACION"></app-toggle-button>
+      </div>
+    </section>
+    <section class="shared-container">
+      <app-display-button
+        message="PALMEROLA"
+        class="xpl display-btn"
+        title="XPL"
+      ></app-display-button>
+      <app-display-button
+        message="VILLEDA MORALES"
+        class="rvm display-btn"
+        title="RVM"
+      ></app-display-button>
+    </section>
+    <section class="shared-container">
+      <app-display-button
+        message="TONCONTIN"
+        class="tct display-btn"
+        title="TCT"
+      ></app-display-button>
+      <app-display-button
+        message="GOLOSON"
+        class="gls display-btn"
+        title="GLS"
+      ></app-display-button>
+    </section>
+    <div class="main-button">
+      <app-primary-button>CONFIRMAR DESTINO</app-primary-button>
+    </div>
+  </div>
+</ion-content>
