--- a/src/app/passengers/containers/experiences/experiences.component.html
+++ b/src/app/passengers/containers/experiences/experiences.component.html
@@ -1,25 +1,27 @@
 <app-shared-header></app-shared-header>
 
-<div class="container">
-  <section class="experience-container">
-    <div class="label">SOON</div>
-    <img class="raptor" [src]='imageUrl' alt="raptor" />
-  </section>
-  <section class="driveit-container">
-    <div class="title">MANEJALO TU MISMO</div>
-    <p class="paragraph">
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid, quia alias sunt
-      rerum voluptatem nesciunt in voluptates repellendus, animi similique repellat ut delectus possimus
-      quidem temporibus at? Debitis, dignissimos nemo!
-    </p>
-    <div class="footer">TERMINOS Y CONDICIONES</div>
-  </section>
-  <section class="car-container">
-    <div class="label">SOON</div>
-    <div class="car-label">CAR OF THE WEEK</div>
-  </section>
-</div>
+<ion-content>
+  <div class="container">
+    <section class="experience-container">
+      <div class="label">SOON</div>
+      <img class="raptor" [src]='imageUrl' alt="raptor" />
+    </section>
+    <section class="driveit-container">
+      <div class="title">MANEJALO TU MISMO</div>
+      <p class="paragraph">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid, quia alias sunt
+        rerum voluptatem nesciunt in voluptates repellendus, animi similique repellat ut delectus possimus
+        quidem temporibus at? Debitis, dignissimos nemo!
+      </p>
+      <div class="footer">TERMINOS Y CONDICIONES</div>
+    </section>
+    <section class="car-container">
+      <div class="label">SOON</div>
+      <div class="car-label">CAR OF THE WEEK</div>
+    </section>
+  </div>
 
-<div class="main-button">
-  <app-primary-button>MIS VIAJES</app-primary-button>
-</div>
+  <div class="main-button">
+    <app-primary-button>MIS VIAJES</app-primary-button>
+  </div>
+</ion-content>
