--- a/src/app/passengers/containers/specials/specials.component.html
+++ b/src/app/passengers/containers/specials/specials.component.html
@@ -1,27 +1,29 @@
 <app-shared-header></app-shared-header>
-<div class="container">
-  <section class="specials-container">
-    <div class="label main-banner-soon">SOON</div>
-    <div class="button-container">
-      <div class="label">2KM</div>
-      <app-white-button message="RENTAR"></app-white-button>
-    </div>
-  </section>
-  <section class="ambulance-container">
-    <div class="button-container">
-      <app-white-button message="AMBULANCIA"></app-white-button>
-      <div class="label">7MIN</div>
-    </div>
-  </section>
-  <section class="shared-container">
-    <section class="armored-container">
-      <app-white-button message="BLINDADOS"></app-white-button>
+<ion-content>
+  <div class="container">
+    <section class="specials-container">
+      <div class="label main-banner-soon">SOON</div>
+      <div class="button-container">
+        <div class="label">2KM</div>
+        <app-white-button message="RENTAR"></app-white-button>
+      </div>
     </section>
-    <section class="crane-container">
-      <app-white-button message="GRUA"></app-white-button>
+    <section class="ambulance-container">
+      <div class="button-container">
+        <app-white-button message="AMBULANCIA"></app-white-button>
+        <div class="label">7MIN</div>
+      </div>
     </section>
-  </section>
-</div>
-<div class="main-button">
-  <app-primary-button>MIS VIAJES</app-primary-button>
-</div>
+    <section class="shared-container">
+      <section class="armored-container">
+        <app-white-button message="BLINDADOS"></app-white-button>
+      </section>
+      <section class="crane-container">
+        <app-white-button message="GRUA"></app-white-button>
+      </section>
+    </section>
+  </div>
+  <div class="main-button">
+    <app-primary-button>MIS VIAJES</app-primary-button>
+  </div>
+</ion-content>
