--- a/src/app/shared/faq/components/faq.component.html
+++ b/src/app/shared/faq/components/faq.component.html
@@ -1,60 +1,62 @@
 <app-shared-header></app-shared-header>
-<div class="container">
-  <div class="text">
-    <div class="title">CUENTA</div>
-  </div>
-  <section class="section">
-    <div class="text inter">
-      Desbloquear cuenta
-      <span class="material-icons-outlined icon">
-        arrow_forward_ios
-        </span>
-    </div>
-  </section>
-    <div class="line"></div>
-    <div class="text inter">
-      Cambiar numero de telefono
-      <span class="material-icons-outlined icon">
-        arrow_forward_ios
-        </span>
-    </div>
-    <div class="line"></div>
-    <div class="text inter">
-      Seguridad
-      <span class="material-icons-outlined icon">
-        arrow_forward_ios
-      </span>
-    </div>
-    <div class="line"></div>
+<ion-content>
+  <div class="container">
     <div class="text">
-      <div class="title">PAGOS Y PRECIOS</div>
+      <div class="title">CUENTA</div>
     </div>
-    <div class="text inter">
-      Metodos de pago
-      <span class="material-icons-outlined icon">
-        arrow_forward_ios
-      </span>
-    </div>
-    <div class="line"></div>
-    <div class="text inter">
-      Estimacion de precios
-      <span class="material-icons-outlined icon">
-        arrow_forward_ios
-      </span>
-    </div>
-    <div class="line"></div>
-    <div class="text inter">
-      Costos por cancelacion
-      <span class="material-icons-outlined icon">
-        arrow_forward_ios
-      </span>
-    </div>
-    <div class="line"></div>
-    <div class="text inter">
-      Costos por daño a la unidad
-      <span class="material-icons-outlined icon">
-        arrow_forward_ios
-      </span>
-    </div>
-    <div class="line"></div>
-</div>
+    <section class="section">
+      <div class="text inter">
+        Desbloquear cuenta
+        <span class="material-icons-outlined icon">
+          arrow_forward_ios
+          </span>
+      </div>
+    </section>
+      <div class="line"></div>
+      <div class="text inter">
+        Cambiar numero de telefono
+        <span class="material-icons-outlined icon">
+          arrow_forward_ios
+          </span>
+      </div>
+      <div class="line"></div>
+      <div class="text inter">
+        Seguridad
+        <span class="material-icons-outlined icon">
+          arrow_forward_ios
+        </span>
+      </div>
+      <div class="line"></div>
+      <div class="text">
+        <div class="title">PAGOS Y PRECIOS</div>
+      </div>
+      <div class="text inter">
+        Metodos de pago
+        <span class="material-icons-outlined icon">
+          arrow_forward_ios
+        </span>
+      </div>
+      <div class="line"></div>
+      <div class="text inter">
+        Estimacion de precios
+        <span class="material-icons-outlined icon">
+          arrow_forward_ios
+        </span>
+      </div>
+      <div class="line"></div>
+      <div class="text inter">
+        Costos por cancelacion
+        <span class="material-icons-outlined icon">
+          arrow_forward_ios
+        </span>
+      </div>
+      <div class="line"></div>
+      <div class="text inter">
+        Costos por daño a la unidad
+        <span class="material-icons-outlined icon">
+          arrow_forward_ios
+        </span>
+      </div>
+      <div class="line"></div>
+  </div>
+</ion-content>
