--- a/src/app/shared/header/components/header/header.component.scss
+++ b/src/app/shared/header/components/header/header.component.scss
@@ -34,6 +34,10 @@
   }
 }
 
+.white-background {
+  background-color: $white;
+}
+
 .header-wrapper {
   display: flex;
   justify-content: space-between;
