--- a/src/app/shared/header/components/header/header.component.html
+++ b/src/app/shared/header/components/header/header.component.html
@@ -1,4 +1,4 @@
-<ion-header class="container ion-no-border"  collapse="fade">
+<ion-header class="container ion-no-border" [class.white-background] = "whiteHeader" collapse="fade">
   <div class="back-arrow" (click)="goToPreviousPage()">
     <span class="material-icons-round icon"> arrow_back_ios </span>
   </div>
