--- a/src/app/shared/profile/components/profile/profile.component.html
+++ b/src/app/shared/profile/components/profile/profile.component.html
@@ -1,21 +1,23 @@
 <app-shared-header></app-shared-header>
-<div class="container">
-  <app-profile-header [showEditIcon]="true" [profileName]="user.fullName"></app-profile-header>
-  <section class="profile-options">
-  <div class="row">
-      <app-display-button message="MIS VIAJES" class="top-left"></app-display-button>
-      <app-display-button message="MIS DATOS" class="top-right" link="/passenger/user-info"></app-display-button>
-    </div>
+<ion-content>
+  <div class="container">
+    <app-profile-header [showEditIcon]="true" [profileName]="user.fullName"></app-profile-header>
+    <section class="profile-options">
     <div class="row">
-      <app-display-button message="INGRESAR TARJETA" class="bottom-left"></app-display-button>
-      <app-display-button message="NOTIFICACIONES" class="bottom-right"></app-display-button>
-    </div>
-  </section>
-  <section class="customer-service" [routerLink]="['../customer-service']">
-    <img class="image" src="https://biiz-bucket.s3.us-east-2.amazonaws.com/iiz.png" alt="Customer Image">
-    <p class="service-label">SERVICIO AL CLIENTE</p>
-  </section>
-</div>
-<div class="main-button">
-  <app-primary-button>Terminos y condiciones</app-primary-button>
-</div>
+        <app-display-button message="MIS VIAJES" class="top-left"></app-display-button>
+        <app-display-button message="MIS DATOS" class="top-right" link="/passenger/user-info"></app-display-button>
+      </div>
+      <div class="row">
+        <app-display-button message="INGRESAR TARJETA" class="bottom-left"></app-display-button>
+        <app-display-button message="NOTIFICACIONES" class="bottom-right"></app-display-button>
+      </div>
+    </section>
+    <section class="customer-service" [routerLink]="['../customer-service']">
+      <img class="image" src="https://biiz-bucket.s3.us-east-2.amazonaws.com/iiz.png" alt="Customer Image">
+      <p class="service-label">SERVICIO AL CLIENTE</p>
+    </section>
+  </div>
+  <div class="main-button">
+    <app-primary-button>Terminos y condiciones</app-primary-button>
+  </div>
+</ion-content>
