--- a/src/app/passengers/containers/specials/specials.component.scss
+++ b/src/app/passengers/containers/specials/specials.component.scss
@@ -3,16 +3,18 @@
 .container {
   @include flex-column;
   gap: 0.7rem;
+  width: 100%;
+  height: 85%;
 }
 
 .main-button {
-  @include flex-center;
+  width: 90%;
   margin: 0.5rem;
 }
 
 .specials-container {
-  height: 28.1rem;
-  width: 34.2rem;
+  width: 90%;
+  height: 50%;
   @include background-cover('https://biiz-bucket.s3.us-east-2.amazonaws.com/specials-car.png');
   border-radius: 0.6rem;
   display: flex;
@@ -23,8 +25,8 @@
 
 .ambulance-container {
   @include background-cover('https://biiz-bucket.s3.us-east-2.amazonaws.com/specials-ambulance.png');
-  height: 14.7rem;
-  width: 34.2rem;
+  height: 25%;
+  width: 90%;
   border-radius: 0.6rem;
   display: flex;
   justify-content: flex-start;
@@ -34,6 +36,8 @@
 .shared-container {
   display: flex;
   gap: 0.5rem;
+  height: 25%;
+  width: 90%;
 }
 
 .armored-container,
@@ -41,8 +45,7 @@
   display: flex;
   align-items: flex-end;
   justify-content: center;
-  height: 13.2rem;
-  width: 17.1rem;
+  width: 50%;
   border-radius: 0.4rem;
 }
 
