--- a/src/app/passengers/containers/experiences/experiences.component.scss
+++ b/src/app/passengers/containers/experiences/experiences.component.scss
@@ -4,10 +4,12 @@
   @include flex-column;
   color: $white;
   gap: 0.7rem;
+  width: 100%;
+  height: 85%;
 }
 
 .main-button {
-  @include flex-center;
+  width: 90%;
   margin: 0.5rem;
 }
 
@@ -36,8 +38,8 @@
   flex-direction: column;
   gap: 9.5rem;
   border-radius: 0.6rem;
-  height: 31.3rem;
-  width: 34.2rem;
+  height: 50%;
+  width: 90%;
 
   .raptor {
     height: 2.6rem;
@@ -51,6 +53,8 @@
   align-items: center;
   flex-direction: column;
   gap: 0.5rem;
+  height: 25%;
+  width: 90%;
 
   .title {
     font-size: 0.8rem;
@@ -62,7 +66,6 @@
     margin: 0;
     font-size: 0.7rem;
     line-height: 1rem;
-    width: 24.5rem;
     text-align: center;
   }
 
@@ -77,6 +80,8 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  height: 25%;
+  width: 90%;
 
   .car-label {
     font-weight: bold;
