--- a/src/app/shared/profile/components/profile/profile.component.scss
+++ b/src/app/shared/profile/components/profile/profile.component.scss
@@ -2,38 +2,51 @@
 
 .container {
   @include flex-column;
-  font-weight: bold;
   gap: 0.15rem;
+  width: 100%;
+  height: 85%;
 }
 
 .row {
   display: flex;
   gap: 0.8rem;
+  height: 50%;
+  width: 100%;
 }
 
 .button {
-  @include flex-center;
   background-color: $white;
 }
 
 .top-left {
+  width: 50%;
+  display: flex;
+  border-radius: 0.4rem;
   @include background-cover('https://biiz-bucket.s3.us-east-2.amazonaws.com/car-top-left.png');
 }
 
 .top-right {
+  width: 50%;
+  display: flex;
+  border-radius: 0.4rem;
   @include background-cover('https://biiz-bucket.s3.us-east-2.amazonaws.com/car-top-right.png');
 }
 
 .bottom-left {
+  width: 50%;
+  display: flex;
+  border-radius: 0.4rem;
   @include background-cover('https://biiz-bucket.s3.us-east-2.amazonaws.com/car-bottom-left.png');
 }
 
 .bottom-right {
+  width: 50%;
+  display: flex;
+  border-radius: 0.4rem;
   @include background-cover('https://biiz-bucket.s3.us-east-2.amazonaws.com/car-bottom-right.png');
 }
 
 .image {
-  width: 6.8rem;
   height: 3.8rem;
 }
 
@@ -43,14 +56,15 @@
   align-items: center;
   gap: 0.8rem;
   margin-top: 0.8rem;
-  width: 34rem;
+  width: 90%;
+  height: 50%;
 }
 
 .customer-service {
   margin-top: 1rem;
   border-radius: 0.4rem;
-  width: 33.9rem;
-  height: 14.5rem;
+  width: 90%;
+  height: 30%;
   background-color: $black;
   font-size: 0.8rem;
   display: flex;
@@ -69,12 +83,11 @@
   margin-bottom: 1.5rem;
   text-align: center;
   background-color: $white;
-  width: 24.1rem;
+  width: 80%;
   border-radius: 0.4rem;
 }
 
 .main-button {
-  display: flex;
-  justify-content: center;
   margin: 1.3rem;
+  width: 90%;
 }
