--- a/src/app/shared/profile/components/profile/profile.component.html
+++ b/src/app/shared/profile/components/profile/profile.component.html
@@ -3,13 +3,13 @@
   <div class="container">
     <app-profile-header [showEditIcon]="true" [profileName]="user.fullName"></app-profile-header>
     <section class="profile-options">
-    <div class="row">
-        <app-display-button message="MIS VIAJES" class="top-left"></app-display-button>
-        <app-display-button message="MIS DATOS" class="top-right" link="/passenger/user-info"></app-display-button>
+      <div class="row">
+        <app-display-button message="MIS VIAJES" class="car-box top-left"></app-display-button>
+        <app-display-button message="MIS DATOS" class="car-box top-right" link="/passenger/user-info"></app-display-button>
       </div>
       <div class="row">
-        <app-display-button message="INGRESAR TARJETA" class="bottom-left"></app-display-button>
-        <app-display-button message="NOTIFICACIONES" class="bottom-right"></app-display-button>
+        <app-display-button message="INGRESAR TARJETA" class="car-box bottom-left"></app-display-button>
+        <app-display-button message="NOTIFICACIONES" class="car-box bottom-right"></app-display-button>
       </div>
     </section>
     <section class="customer-service" [routerLink]="['../customer-service']">
