--- a/src/app/passengers/containers/airport/airport.component.scss
+++ b/src/app/passengers/containers/airport/airport.component.scss
@@ -2,25 +2,33 @@
 
 .container {
   @include flex-column;
+  width: 100%;
+  height: 85%;
   gap: 0.7rem;
 }
 
+.flex-container {
+  display: flex;
+  height: 100%;
+  width: 50%;
+}
+
 .main-button {
-  @include flex-center;
+  width: 90%;
   margin: 0.5rem;
 }
 
 .airport-banner-container {
-  height: 18rem;
-  width: 34.2rem;
+  height: 40%;
+  width: 90%;
   @include background-cover('https://biiz-bucket.s3.us-east-2.amazonaws.com/airport-banner.png');
   border-radius: 0.6rem;
   @include flex-center;
 }
 
 .airport-gap-container {
-  height: 1rem;
-  width: 34.2rem;
+  height: 5%;
+  width: 90%;
   @include flex-center;
   flex-direction: row;
   justify-content: space-between;
@@ -39,49 +47,28 @@
   @include flex-center;
   gap: 0.8rem;
   border-radius: 0.6rem;
-
-  .first-container,
-  .second-container {
-    @include flex-center;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    height: 13.2rem;
-    width: 16.7rem;
-    border-radius: 0.4rem;
-
-    .title {
-      font-size: 1.2rem;
-      letter-spacing: 0.2rem;
-      font-weight: bold;
-      color: $white;
-      align-self: flex-start;
-      margin-top: 1.5rem;
-      margin-left: 3rem;
-    }
-
-    .label {
-      margin-bottom: 1.2rem;
-    }
-  }
+  height: 30%;
+  width: 90%;
 }
 
 .xpl {
+  @extend .flex-container;
   @include background-cover('https://biiz-bucket.s3.us-east-2.amazonaws.com/airport-location-4.png');
 }
 
 .rvm {
+  @extend .flex-container;
   @include background-cover('https://biiz-bucket.s3.us-east-2.amazonaws.com/airport-location-3.png');
-  background-repeat: no-repeat;
 }
 
 .tct {
+  @extend .flex-container;
   @include background-cover('https://biiz-bucket.s3.us-east-2.amazonaws.com/airport-location-1.png');
 }
 
 .gls {
+  @extend .flex-container;
   @include background-cover('https://biiz-bucket.s3.us-east-2.amazonaws.com/airport-location-2.png');
-  background-repeat: no-repeat;
 }
 
 .label {
