--- a/src/app/shared/buttons/components/display-button/display-button.component.scss
+++ b/src/app/shared/buttons/components/display-button/display-button.component.scss
@@ -8,10 +8,11 @@
   align-items: center;
 
   .title {
-    font-size: 1.2rem;
+    font-size: 1.8rem;
     letter-spacing: 0.2rem;
     font-weight: bold;
     color: $white;
     align-self: flex-start;
+    margin: 1rem;
   }
 }
