Profile header component responsiveness implemented

--- a/src/app/passengers/containers/user-info/user-info.component.html
+++ b/src/app/passengers/containers/user-info/user-info.component.html
@@ -1,7 +1,7 @@
 <app-shared-header></app-shared-header>
 <ion-content>
-  <app-profile-header></app-profile-header>
   <div class="container">
+    <app-profile-header class="profile"></app-profile-header>
     <div class="info">
       <p>NOMBRE COMPLETO</p>
       <input
