--- a/src/app/shared/profile/components/profile/profile.component.html
+++ b/src/app/shared/profile/components/profile/profile.component.html
@@ -1,7 +1,7 @@
 <app-shared-header></app-shared-header>
 <ion-content>
   <div class="container">
-    <app-profile-header [showEditIcon]="true" [profileName]="user.fullName"></app-profile-header>
+    <app-profile-header [showEditIcon]="true" [profileName]="user.fullName" class="profile"></app-profile-header>
     <section class="profile-options">
       <div class="row">
         <app-display-button message="MIS VIAJES" class="car-box top-left"></app-display-button>
