--- a/src/app/passengers/containers/trip/trip.component.html
+++ b/src/app/passengers/containers/trip/trip.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <capacitor-google-map class="map" #map></capacitor-google-map>
+  <div class="map" #map></div>
   <app-shared-header></app-shared-header>
   <div class="button-container">
     <div class="autocomplete">
