--- a/src/app/shared/customer-service/components/customer-service.component.scss
+++ b/src/app/shared/customer-service/components/customer-service.component.scss
@@ -2,57 +2,79 @@
 
 .container {
   @include flex-column;
+  height: 100%;
+
+  .info-container {
+    height: 60%;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+  }
 }
 
 .header-container {
-  width: 37.6rem;
-  height: 38rem;
+  width: 100%;
+  height: 40%;
   @include background-cover('https://biiz-bucket.s3.us-east-2.amazonaws.com/prado.png');
   display: flex;
   flex-direction: column;
   align-items: center;
-}
 
-.options {
-  @include flex-center;
-  width: 17rem;
-  height: 6rem;
-  padding: 0.4rem;
+  .main-header {
+    width: 100%;
+  }
+
+  .profile-header {
+    width: 90%;
+    height: 100%;
+  }
 }
 
 .title {
+  font-size: 1.3rem;
   padding: 1.5rem;
-  font-size: 1.5rem;
-  color: $black;
+  margin: 0;
+  letter-spacing: 0rem;
   text-shadow: 0.2rem 0.2rem 0.4rem rgba(0, 0, 0, 0.5);
 }
 
+.button-wrapper {
+  height: 60%;
+  width: 100%;
+  display: flex;
+  gap: 0.5rem;
+  flex-direction: column;
+}
+
 .row {
-  margin-top: 1rem;
+  margin: 1rem 0;
   display: flex;
   justify-content: center;
+  gap: 1rem;
+
+  .option {
+    width: 50%;
+  }
 }
 
 .row-sh {
-  display: flex;
-  width: 34.3rem;
+  height: 50%;
   font-size: 1.6rem;
+  font-weight:lighter;
+  width: 100%;
+  display: flex;
+  gap: 0.5rem;
 }
 
-.shortcuts {
+.text {
   display: flex;
   align-items: flex-end;
-  margin: 0.20rem;
-  width: 16.5rem;
-  height: 13rem;
-  border-radius: 0.4rem;
-  background-color: $white;
-  box-shadow: 0rem 0rem 0.5rem 0.5rem hsla(0, 0%, 0%, 0.027);
-
-  .text {
-    text-align: justify;
-    opacity: 0.6;
-    margin-left: 2rem;
-    margin-bottom: 2rem;
-  }
+  padding: 2.5rem 1rem;
+  opacity: 0.6;
+  width: 50%;
+  margin: 0;
+  box-shadow: 0rem 0rem 1rem 0rem rgb(201, 201, 201);
+  border-radius: 0.5rem;
 }
