--- a/src/app/shared/faq/components/faq.component.scss
+++ b/src/app/shared/faq/components/faq.component.scss
@@ -2,10 +2,14 @@
 
 .container {
   @include flex-column;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
+  height: 80%;
   gap: 0.15rem;
+  color: setColor(firm-gray, 300);
+
+  .option-wrapper {
+    width: 80%;
+    height: 40%;
+  }
 }
 
 .section {
@@ -14,8 +18,7 @@
 }
 
 .title {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
+  margin: 3rem 0;
   font-size: 1.7rem;
   font-weight: bold;
 }
@@ -24,21 +27,13 @@
   padding-bottom: 2rem;
   margin-top: 1.6rem;
   display: flex;
+  width: 100%;
   justify-content: space-between;
-  color: setColor(firm-gray, 300);
-  width: 32rem;
+  border-bottom: 0.1rem solid #aeaeae7a;
 
   .icon {
-    margin-top: 0.4rem;
-    margin-right: 1rem;
+    margin-top: 0.5rem;
     color: setColor(firm-gray, 200);
-    height: 1rem;
     font-size: 1.3rem;
   }
-}
-
-.line {
-  margin-right: 1rem;
-  width: 31rem;
-  border-bottom: 0.01rem solid $line;
 }
