--- a/src/app/passengers/containers/forgot-something/forgot-something.component.html
+++ b/src/app/passengers/containers/forgot-something/forgot-something.component.html
@@ -1,35 +1,27 @@
 <app-shared-header></app-shared-header>
 <ion-content>
-  <section class="section">
-    <div class="text">
-      OLVIDÉ ALGO
+  <div class="container">
+    <div class="section">
+      <p class="text">OLVIDÉ ALGO</p>
+      <p class="info inter"> {{ message }} </p>
     </div>
-    <div class="info inter">
-      Si dejó algo olvidado contactanos Io más
-      pronto posible, y brindenos la mayor cantidad
-      de detalles, Ie conectaremos directamente
-      con su chofer asignado. Puedes también
-      comunicarte vía chat en vivo o llamar a
-      nuestros números de servicio al cliente que
-      24 horas del día.
+    <div class="section">
+      <p class="text">CUENTANOS</p>
+      <form [formGroup]="forgotSomethingForm" class="form">
+        <mat-form-field class="form-field">
+          <textarea
+            class="multiline-input"
+            placeholder="Tu mensaje aquí"
+            matInput
+            formControlName="message"
+            maxlength="500"
+            minlength="1"
+            rows="9"
+            required
+          ></textarea>
+        </mat-form-field>
+      </form>
+      <app-primary-button class="button">ENVIAR</app-primary-button>
     </div>
-    <div class="text">
-      CUENTANOS
-    </div>
-    <form [formGroup]="forgotSomethingForm">
-      <mat-form-field class="form-field">
-        <textarea
-          class="multiline-input"
-          placeholder="Tu mensaje aquí"
-          matInput
-          formControlName="message"
-          maxlength="500"
-          minlength="1"
-          rows="9"
-          required
-        ></textarea>
-      </mat-form-field>
-    </form>
-    <app-primary-button>ENVIAR</app-primary-button>
-  </section>
+  </div>
 </ion-content>
