--- a/src/app/passengers/containers/accident/accident.component.scss
+++ b/src/app/passengers/containers/accident/accident.component.scss
@@ -1,35 +1,45 @@
-@import 'src/app/core/sass/colors';
+@import 'src/app/core/sass/global';
 
-.section {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
+.container {
+  width: 100%;
+  height: 90%;
   color: setColor(firm-gray, 300);
+
+  .section {
+    @include flex-column;
+    margin-bottom: 3rem;
+    max-height: 33%;
+  }
+}
+
+.radio-wrapper {
+  width: 90%;
+  display: flex;
+
+  .radio {
+    width: 50%;
+  }
+}
+
+.text, .info, .form, .button {
+  width: 90%;
 }
 
 .text {
   display: flex;
   margin: 1rem 0;
-  width: 33.3rem;
   justify-content: flex-start;
   font-weight: bold;
 }
 
 .info {
-  text-align: justify;
   font-size: 1.5rem;
-  width: 33.3rem;
-}
-
-.options {
-  display: flex;
-  justify-content: space-between;
-  width: 31rem;
+  width: 90%;
 }
 
 .textarea-container {
   margin-bottom: 1.5rem;
-  width: 34rem;
+  width: 90%;
   position: relative;
 }
 
