--- a/src/app/shared/buttons/components/base-button.component.scss
+++ b/src/app/shared/buttons/components/base-button.component.scss
@@ -16,6 +16,11 @@
   color: $white;
 }
 
+.btn-white {
+  background-color: $white;
+  color: $black;
+}
+
 .button-content {
   @include flex-center;
 }
