--- a/src/styles.scss
+++ b/src/styles.scss
@@ -69,3 +69,14 @@ a {
   background-image: url('assets/images/check.svg');
   background-size: 90% 90%;
 }
+
+.loading {
+  display: flex;
+  position: absolute;
+  z-index: 3;
+  backdrop-filter: blur(2rem);
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
