map implementation optimizes, google geocoder used instead, plugin removed

--- a/src/app/passengers/containers/new-adress/new-address.component.html
+++ b/src/app/passengers/containers/new-adress/new-address.component.html
@@ -25,7 +25,7 @@
             *ngFor="let item of autocompleteAddresses"
             tappable
             color='dark'
-            (click)="SelectSearchResult(item)"
+            (click)="SelectSearchResult(item.description)"
           >
             {{ item.description }}
           </ion-item>
